--- a/rest-api-starting-code/src/main/resources/application.properties
+++ b/rest-api-starting-code/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.level.org.springframework=info
-spring.security.user.name=jevina
-spring.security.user.password=dummy
+#spring.security.user.name=jevina
+#spring.security.user.password=dummy
+
+# default - amV2aW5hOmR1bW15
