connecting jpa and hibernte

--- a/rest-api-starting-code/src/main/resources/application.properties
+++ b/rest-api-starting-code/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 logging.level.org.springframework=info
 #spring.security.user.name=jevina
 #spring.security.user.password=dummy
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+
+#creates the table first before running the query from data.sql
+spring.jpa.defer-datasource-initialization=true
 
 # default - amV2aW5hOmR1bW15
 
